# Joycon2forMac

./: CMakeLists.txt  Joycon2BLEViewer-Info.plist  Joycon2forMac.entitlements  LICENSE  README.md  build.sh  project.yml
include/: Joycon2BLEReceiver.h  Joycon2BLEViewer.h  Joycon2VirtualHID.h
src/: Joycon2BLEReceiver.mm  Joycon2BLEViewer.mm  Joycon2VirtualHID.mm  main.mm  main_ble.mm  main_hid.mm
